# WebsocketParserPolymarket

./: .gitignore  README.md  config.example.yaml  config.smoketest.yaml  pyproject.toml  setup.py
collector/: __init__.py  __main__.py  binance.py  config.py  discovery.py  metrics.py  models.py  orderbook.py  parquet_writer.py  polymarket.py  service.py
docs/: AUDIT.md  DEPLOY_TO_GITHUB.md  DUCKDB_ANALYSIS.md  duckdb_queries.sql
tests/: test_binance_sequence.py  test_config_validation.py  test_discovery_selection.py  test_metrics.py  test_orderbook.py  test_polymarket_filter.py
